@@ -5,6 +5,7 @@ import (
 
 	"github.com/elastic/beats/libbeat/beat"
 	"github.com/elastic/beats/libbeat/common"
+	"github.com/elastic/beats/libbeat/common/cfgwarn"
 )
 
 var outputReg = map[string]Factory{}
@@ -41,6 +42,10 @@ func Load(info beat.Info, stats *Stats, name string, config *common.Config) (Gro
 	factory := FindFactory(name)
 	if factory == nil {
 		return Group{}, fmt.Errorf("output type %v undefined", name)
+	}
+
+	if err := cfgwarn.CheckRemoved5xSetting(config, "flush_interval"); err != nil {
+		return Fail(err)
 	}
 
 	return factory(info, stats, config)
